# tai-accounts-postgres

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: build-studio.mjs
src/tai42_accounts_postgres/: __init__.py  db.py  hashing.py  provider.py  rate_limit.py  routes_login.py  routes_users.py  service.py  settings.py  stores.py
src/tai42_accounts_postgres/sql/: accounts.init.sql
src/tai42_accounts_postgres/studio/: studio-manifest.json  tai42-accounts-postgres-CUNscC8H.js  tai42-accounts-postgres-Ulk7-WS7.css
src/tai_accounts_postgres/: __init__.py  db.py  hashing.py  provider.py  rate_limit.py  routes_login.py  routes_users.py  service.py  settings.py  stores.py
src/tai_accounts_postgres/sql/: accounts.init.sql
src/tai_accounts_postgres/studio/: studio-manifest.json  tai-accounts-postgres-BXH6VDWh.css  tai-accounts-postgres-DaPjMraJ.js
studio-src/: api.test.ts  api.ts  css.d.ts  index.test.tsx  index.tsx  styles.css  test-setup.ts  users-page.test.tsx  users-page.tsx
tests/: conftest.py  test_db.py  test_deferred_scope.py  test_hashing.py  test_import_graph.py  test_provider.py  test_rate_limit.py  test_routes_login.py  test_routes_users.py  test_service.py  test_settings.py  test_stores.py
