[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tai-accounts-postgres"
version = "0.1.0"
description = "Postgres-backed accounts provider for the TAI ecosystem: an installable plugin that owns user accounts, password login, sessions, and invites, registers itself as the \"accounts-postgres\" provider, and ships a Studio users-admin UI."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "tai42", email = "oss@tai42.ai" },
]
keywords = ["tai", "accounts", "authentication", "login", "sessions", "postgres", "access-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # The pure interface contract the provider registers through: the accounts
    # ABCs (AccountsProvider, AccountsAdminServices, AccountsProviderSettings),
    # the login-method metadata models, and the module-level accounts registry.
    "tai-contract>=0.1,<0.2",
    # The Postgres and Redis clients plus the session/invite token hash. The
    # `postgres` extra (psycopg[binary,pool]) backs the user/session/invite store;
    # the `redis` extra backs the login rate limiter and the shared bootstrap
    # token. Both are REQUIRED, not optional: the plugin's storage IS Postgres and
    # its throttle IS Redis, so both client modules must resolve for it to import.
    "tai-kit[postgres,redis]>=0.1,<0.2",
    # argon2id password hashing (RFC 9106 defaults, rehash-on-login).
    "argon2-cffi>=23",
]

[project.urls]
Homepage = "https://tai42.ai"
Repository = "https://github.com/tai42ai/tai-accounts-postgres"
Issues = "https://github.com/tai42ai/tai-accounts-postgres/issues"
Changelog = "https://github.com/tai42ai/tai-accounts-postgres/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Public dev/test tooling. No live-Postgres test dependency: the store seam is
# faked in tests, and real-SQL correctness is proven by the ecosystem e2e leg
# against a live database, so this repo needs no pytest-postgresql.
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.389",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tai_accounts_postgres*"]

[tool.setuptools.package-data]
# The packaged DDL (loaded by db.py at apply time) and the built Studio bundle
# (served by the host) travel in the wheel alongside the typing marker.
tai_accounts_postgres = ["py.typed", "sql/*.sql", "studio/*"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PIE", "PT", "RUF", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tai_skeleton".msg = "tai-accounts-postgres is a contract-facing plugin: it never imports tai-skeleton."

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["tai_accounts_postgres"]

[tool.coverage.report]
fail_under = 95

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "warning"
